<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:scrollHorizontally="false"
            android:text="@string/contact_details_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_use"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bn_orange"
            android:paddingBottom="@dimen/dp12"
            android:paddingTop="@dimen/dp10"
            android:text="@string/contact_details_button_use"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_save"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bn_orange"
            android:paddingBottom="@dimen/dp12"
            android:paddingTop="@dimen/dp10"
            android:text="@string/contact_details_button_save"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_delete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bn_orange"
            android:paddingBottom="@dimen/dp12"
            android:paddingTop="@dimen/dp10"
            android:text="@string/contact_details_button_delete"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/button_copy"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bn_orange"
            android:paddingBottom="@dimen/dp12"
            android:paddingTop="@dimen/dp10"
            android:text="@string/contact_details_button_copy"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>