<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:hint="@string/ricerca_contatto"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:inputType="text"
            android:textSize="12dp" >            
        </EditText>

        <ImageButton
            android:id="@+id/search"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/phone_ab_search_button_text" android:background="@drawable/ic_cerca"/>

    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="10dp"
        android:choiceMode="singleChoice"
        
        />
    
    
    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ab_list_empty" />

</LinearLayout>